--- a/app/views/default/auth.pug
+++ b/app/views/default/auth.pug
@@ -6,7 +6,7 @@ block content
     .wrap
       -if(parent)
         a.back(href=parent)
-      a.home(href='/') ShareList
+      a.home(href='/') zthelast
   section.wrap.auth
     h3 #{name}
     div
